--- a/ud839_Miwok-Starter-code/app/src/main/res/layout/list_item.xml
+++ b/ud839_Miwok-Starter-code/app/src/main/res/layout/list_item.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:minHeight="@dimen/list_item_height"
+    android:layout_height="@dimen/list_item_height"
     android:background="@color/tan_background"
     android:orientation="horizontal">
 
@@ -15,7 +14,11 @@
     <LinearLayout
         android:id="@+id/text_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="@dimen/list_item_height"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@id/image"
         android:orientation="vertical"
         android:paddingLeft="16dp">
         <TextView
@@ -36,5 +39,18 @@
             android:textAppearance="?android:textAppearanceMedium"
             android:textColor="@android:color/white"/>
     </LinearLayout>
+    
+    <ImageView
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="16dp"
+        android:src="@drawable/ic_play_arrow"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="?android:attr/selectableItemBackground"/>
 
-</LinearLayout>
+
+</RelativeLayout>
